@@ -134,9 +134,9 @@ jvalue convertNPVariantToJValue(NPVariant value, JNIType jniType, const char* ja
     case float_type:
         {
             if (type == NPVariantType_Int32)
-                result.j = static_cast<jfloat>(NPVARIANT_TO_INT32(value));
+                result.f = static_cast<jfloat>(NPVARIANT_TO_INT32(value));
             else if (type == NPVariantType_Double)
-                result.j = static_cast<jfloat>(NPVARIANT_TO_DOUBLE(value));
+                result.f = static_cast<jfloat>(NPVARIANT_TO_DOUBLE(value));
             else
                 bzero(&result, sizeof(jvalue));
         }
@@ -145,9 +145,9 @@ jvalue convertNPVariantToJValue(NPVariant value, JNIType jniType, const char* ja
     case double_type:
         {
             if (type == NPVariantType_Int32)
-                result.j = static_cast<jdouble>(NPVARIANT_TO_INT32(value));
+                result.d = static_cast<jdouble>(NPVARIANT_TO_INT32(value));
             else if (type == NPVariantType_Double)
-                result.j = static_cast<jdouble>(NPVARIANT_TO_DOUBLE(value));
+                result.d = static_cast<jdouble>(NPVARIANT_TO_DOUBLE(value));
             else
                 bzero(&result, sizeof(jvalue));
         }
